WebCore/html/HTMLFormControlElement.cpp
@@ -52,6 +52,7 @@ using namespace HTMLNames;
 HTMLFormControlElement::HTMLFormControlElement(const QualifiedName& tagName, Document* doc, HTMLFormElement* f)
     : HTMLElement(tagName, doc)
     , m_form(f)
+    , m_hasName(false)
     , m_disabled(false)
     , m_readOnly(false)
     , m_required(false)
@@ -89,8 +90,9 @@ ValidityState* HTMLFormControlElement::validity()
 
 void HTMLFormControlElement::parseMappedAttribute(MappedAttribute *attr)
 {
+    bool oldWillValidate = willValidate();
     if (attr->name() == nameAttr)
-        setNeedsStyleRecalc();
+        m_hasName = !attr->isEmpty();
     else if (attr->name() == disabledAttr) {
         bool oldDisabled = m_disabled;
         m_disabled = !attr->isNull();
@@ -114,6 +116,8 @@ void HTMLFormControlElement::parseMappedAttribute(MappedAttribute *attr)
             setNeedsStyleRecalc();
     } else
         HTMLElement::parseMappedAttribute(attr);
+    if (oldWillValidate != willValidate())
+        setNeedsWillValidateCheck();
 }
 
 void HTMLFormControlElement::attach()
@@ -149,9 +153,10 @@ void HTMLFormControlElement::insertedIntoTree(bool deep)
         // setting a form, we will already have a non-null value for m_form, 
         // and so we don't need to do anything.
         m_form = findFormAncestor();
-        if (m_form)
+        if (m_form) {
             m_form->registerFormElement(this);
-        else
+            setNeedsWillValidateCheck();
+        } else
             document()->checkedRadioButtons().addButton(this);
     }
 
@@ -178,9 +183,17 @@ void HTMLFormControlElement::removedFromTree(bool deep)
     if (m_form && !(parser && parser->isHandlingResidualStyleAcrossBlocks()) && findRoot(this) != findRoot(m_form)) {
         m_form->removeFormElement(this);
         m_form = 0;
+        setNeedsWillValidateCheck();
     }
 
     HTMLElement::removedFromTree(deep);
+}
+
+void HTMLFormControlElement::formDestroyed()
+{
+    if (m_form)
+        setNeedsWillValidateCheck();
+    m_form = 0;
 }
 
 const AtomicString& HTMLFormControlElement::formControlName() const
@@ -197,11 +210,6 @@ void HTMLFormControlElement::setName(const AtomicString &value)
 void HTMLFormControlElement::dispatchFormControlChangeEvent()
 {
     dispatchEvent(Event::create(eventNames().changeEvent, true, false));
-}
-
-bool HTMLFormControlElement::disabled() const
-{
-    return m_disabled;
 }
 
 void HTMLFormControlElement::setDisabled(bool b)
@@ -297,12 +305,18 @@ bool HTMLFormControlElement::willValidate() const
     //      The control does not have a repetition template as an ancestor.
     //      The control does not have a datalist element as an ancestor.
     //      The control is not an output element.
-    return form() && !name().isEmpty() && !disabled() && !isReadOnlyFormControl();
+    return m_form && m_hasName && !m_disabled && !m_readOnly;
 }
 
 String HTMLFormControlElement::validationMessage()
 {
     return validity()->validationMessage();
+}
+
+void HTMLFormControlElement::setNeedsWillValidateCheck()
+{
+    setNeedsStyleRecalc();
+    // FIXME: Show/hide a validation message.
 }
 
 bool HTMLFormControlElement::checkValidity()
@@ -315,12 +329,13 @@ bool HTMLFormControlElement::checkValidity()
     return true;
 }
 
-void HTMLFormControlElement::updateValidity()
+void HTMLFormControlElement::setNeedsValidityCheck()
 {
     if (willValidate()) {
         // Update style for pseudo classes such as :valid :invalid.
         setNeedsStyleRecalc();
     }
+    // FIXME: show/hide a validation message.
 }
 
 void HTMLFormControlElement::setCustomValidity(const String& error)
