WebCore/html/HTMLFormControlElement.h
@@ -63,7 +63,7 @@ public:
 
     virtual void dispatchFormControlChangeEvent();
 
-    bool disabled() const;
+    bool disabled() const { return m_disabled; }
     void setDisabled(bool);
 
     virtual bool supportsFocus() const;
@@ -109,19 +109,22 @@ public:
     virtual bool willValidate() const;
     String validationMessage();
     bool checkValidity();
-    void updateValidity();
+    // This must be called when a validation constraint or control value is changed.
+    void setNeedsValidityCheck();
     void setCustomValidity(const String&);
     virtual bool valueMissing() const { return false; }
     virtual bool patternMismatch() const { return false; }
     virtual bool tooLong() const { return false; }
 
-    void formDestroyed() { m_form = 0; }
+    void formDestroyed();
 
     virtual void dispatchFocusEvent();
     virtual void dispatchBlurEvent();
 
 protected:
     void removeFromForm();
+    // This must be called any time the result of willValidate() has changed.
+    void setNeedsWillValidateCheck();
 
 private:
     virtual HTMLFormElement* virtualForm() const;
@@ -130,6 +133,7 @@ private:
 
     HTMLFormElement* m_form;
     OwnPtr<ValidityState> m_validityState;
+    bool m_hasName : 1;
     bool m_disabled : 1;
     bool m_readOnly : 1;
     bool m_required : 1;
