WebCore/rendering/RenderTextControlMultiLine.cpp
@@ -47,7 +47,7 @@ void RenderTextControlMultiLine::subtreeHasChanged()
     RenderTextControl::subtreeHasChanged();
     HTMLTextAreaElement* textArea = static_cast<HTMLTextAreaElement*>(node());
     textArea->setFormControlValueMatchesRenderer(false);
-    textArea->updateValidity();
+    textArea->setNeedsValidityCheck();
 
     if (!node()->focused())
         return;
