LayoutTests/fast/forms/resources/textarea-live-pseudo-selectors.js
@@ -89,5 +89,17 @@ shouldBe(elBackground, 'validColor');
 el.required = true;
 shouldBe(elBackground, 'invalidColor');
 
+debug('Change maxlength:');
+el = makeInvalid();
+el.value = '1234567890';
+shouldBe(elBackground, 'validColor');
+// Make the value dirty by deleting the last character.
+el.focus();
+el.setSelectionRange(10, 10);
+document.execCommand('delete');
+el.maxLength = 5;
+shouldBe(elBackground, 'invalidColor');
+el.maxLength = 10;
+shouldBe(elBackground, 'validColor');
 
 var successfullyParsed = true;
